--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>git</title>
+    <title>index</title>
 </head>
 <body>
-    <h2>Premier projet Git - GitHub</h2>
+    <h2 class="h2">Premier projet Git - GitHub</h2>
+    <a href="layout.html">Aller à la page layut</a>
 </body>
 </html>
